--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CasHelper</string>
+    <string name="entries_total_title">Totale entrate:</string>
+    <string name="exits_total_title">Totale uscite:</string>
+    <string name="total_title">Totale:</string>
+    <string name="labeltotale">#tot</string>
+    <string name="label_entries_totale">#entriestot</string>
+    <string name="exits_label">#exitsTot</string>
 </resources>
