--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="labeltotale">#tot</string>
     <string name="label_entries_totale">#entriestot</string>
     <string name="exits_label">#exitsTot</string>
+    <string name="add_fab_home_desc">aggiungi item</string>
+    <string name="menu_home">menu_home</string>
 </resources>
