--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,16 @@
     <string name="label_entries_totale">#entriestot</string>
     <string name="exits_label">#exitsTot</string>
     <string name="add_fab_home_desc">aggiungi item</string>
-    <string name="menu_home">menu_home</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
     <string name="back_month_button">back_month</string>
     <string name="next_month_button">next_month_button</string>
+
+    //menu
+    <string name="menu_home">menu_home</string>
+    <string name="menu_spese">Spese</string>
+    <string name="menu_entrate">Entrate</string>
+    <string name="menu_categorie">Categorie</string>
+    <string name="menu_tema">Tema</string>
+    <string name="menu_crediti">Crediti</string>
 </resources>
