--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="incoming_title">Entrate</string>
     <string name="entries_title">Entrate</string>
     <string name="add_title">Aggiungi Transazione</string>
-    <string name ="category_spinner">Seleziona una categoria</string>
+    <string name="category_spinner">Seleziona una categoria</string>
     <string name="value_add">Inserisci importo</string>
     <string name="description_add">Descrizione (opzionale)</string>
     <string name="incoming_add_item">Entrate</string>
@@ -32,4 +32,6 @@
     <string name="update_item">Dettagli Transazione</string>
     <string name="update_button">MODIFICA</string>
     <string name="deleteItem">Elimina</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
