--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
     //menu
     <string name="menu_home">menu_home</string>
-    <string name="menu_spese">Spese</string>
+    <string name="menu_uscite">Uscite</string>
     <string name="menu_entrate">Entrate</string>
     <string name="menu_categorie">Categorie</string>
     <string name="menu_tema">Tema</string>
