--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="incoming_add_item">Entrate</string>
     <string name="exits_add_item">Uscite</string>
     <string name="delete_button">Annulla</string>
+    <string name="euro">Euro</string>
 
     //menu
     <string name="menu_home">menu_home</string>
